# thesis-metropolia

./: .gitignore  README.md  config.yaml  pyproject.toml
src/: client.py  config.py  db.py  run.py  server.py
src/tests/: run_tests.py  test_database.py  test_node_change_handler.py  test_plc_collector.py
